榜单模块功能优化